--- a/!css/screen.css
+++ b/!css/screen.css
@@ -11,6 +11,33 @@ xx */
 
 /* Styles: */
 
+body {
+	padding: 0;
+}
+
+header {
+	padding: 0 0 0 0;
+	background-color: #444;
+	height: 3em;
+	position: fixed;
+	top:0;left:0;
+}
+
 h2 {
 	font-family: 'Press Start 2P', cursive;
+}
+
+
+
+
+
+.fcontainer {
+	display: flex;
+	align-items: center;
+}
+.top-div-L a img {
+	
+}
+.topdiv-R {
+	height:
 }
